[Picture in Picture] Activate controls using enter / space keys.

This change adds in KeyEvent handling to support keyboard usage with
the controls buttons. They should be activated when the 'enter' or
'space' keys are used.

The previous implementation of OnKeyEvent used an OverlayWindowViews
tracking of which control is being focused, which is now obsolete.

Bug: 866291
Change-Id: I8a59337aa7aef5c95da081a9b5f33762462eeaef
Reviewed-on: https://chromium-review.googlesource.com/1146283
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Commit-Queue: Mounir Lamouri <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577172}
Former-commit-id: b6a1601425172f0417c718b7e0671f869976fa50