chrome/browser/ui/views/overlay/overlay_window_views.h
@@ -42,6 +42,7 @@ class OverlayWindowViews : public content::OverlayWindow, public views::Widget {
   gfx::Size GetMinimumSize() const override;
   gfx::Size GetMaximumSize() const override;
   void OnNativeWidgetWorkspaceChanged() override;
+  void OnKeyEvent(ui::KeyEvent* event) override;
   void OnMouseEvent(ui::MouseEvent* event) override;
   void OnGestureEvent(ui::GestureEvent* event) override;
 
